# Jeonbuk-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
template/: excel.md  hwp.md  markdown.md  mcp_instructions.md  powerpoint.md  word.md
utils/: download_file.py  knowledge.py  load_md_templates.py  upload_file.py
